# softwareDesign

./: .gitignore  README.md
finance/: .gitignore  operations.csv  operations.json  operations.yaml  pom.xml  readme.md
microservices/: .env.example  .gitignore  compose.yaml  (+1 more)
microservices/file-analysis/: Cargo.toml  Dockerfile
microservices/file-analysis/images/: test.txt
microservices/file-analysis/src/: lib.rs  main.rs
microservices/file-analysis/src/api/: config.rs  get_analysis.rs  get_word_cloud.rs  mod.rs  openapi.rs
microservices/file-analysis/src/infrastructure/: mod.rs  repo.rs  storage_repo.rs  words_cloud_repo.rs
microservices/file-analysis/src/migrations/: 20230101000000_initial_schema.sql
microservices/file-analysis/src/models/: analysis_metadata.rs  analysis_result.rs  error_respose.rs  file_content.rs  mod.rs  my_error.rs  plagiarism.rs
microservices/file-analysis/src/services/: analysis_service.rs  file_service.rs  mod.rs  words_service.rs
microservices/file-analysis/tests/: tests.rs
microservices/storage-service/: .env_example  .gitignore  Cargo.toml  Dockerfile
microservices/storage-service/content/: test.txt
microservices/storage-service/src/: lib.rs  main.rs
microservices/storage-service/src/api/: config.rs  dto.rs  get_file_content.rs  get_plagiarism.rs  mod.rs  openapi.rs  upload.rs
microservices/storage-service/src/migrations/: 20230101000000_initial_schema.sql
microservices/storage-service/src/models/: FileMetadata.rs  file_metadata.rs  mod.rs  plagiarism.rs
microservices/storage-service/src/repositories/: mod.rs  repo.rs
microservices/storage-service/src/services/: file_service.rs  mod.rs  storage_service.rs
microservices/storage-service/tests/: tests.rs
(+140 files in other folders)
