[package]
name = "storage-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
utoipa = "5.3.1"
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
sqlx = { version = "0.8.5", features = ["postgres", "migrate", "runtime-tokio"] }
actix-multipart = "0.7.2"
sha2 = "0.10.9"
serde_json = "1.0.140"
dotenv = "0.15.0"
env_logger = "0.11.8"